完成合并