@@ -13,7 +13,6 @@ import java.nio.file.Path;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static org.jackhuang.hmcl.util.logging.Logger.LOG;
 
@@ -63,16 +62,18 @@ final class ResourcePackZipFile extends ResourcePackFile {
     }
 
     @Override
-    public ModUpdate checkUpdates(String gameVersion, RemoteModRepository repository) throws IOException {
+    public ModUpdate checkUpdates(String gameVersion, RemoteMod.Type type) throws IOException {
+        RemoteModRepository repository = type.getRepoForType(RemoteModRepository.Type.RESOURCE_PACK);
+        if (repository == null) return null;
         Optional<RemoteMod.Version> currentVersion = repository.getRemoteVersionByLocalFile(file);
         if (currentVersion.isEmpty()) return null;
         List<RemoteMod.Version> remoteVersions = repository.getRemoteVersionsById(currentVersion.get().getModid())
                 .filter(version -> version.getGameVersions().contains(gameVersion))
                 .filter(version -> version.getDatePublished().compareTo(currentVersion.get().getDatePublished()) > 0)
                 .sorted(Comparator.comparing(RemoteMod.Version::getDatePublished).reversed())
-                .collect(Collectors.toList());
+                .toList();
         if (remoteVersions.isEmpty()) return null;
-        return new ModUpdate(this, currentVersion.get(), remoteVersions);
+        return new ModUpdate(this, currentVersion.get(), remoteVersions.get(0));
     }
 }
 
